<resources>
    <!--    Application Level-->
    <string name="app_name">PokéSolve</string>

    <!--    Choice Activity-->
    <string name="header_choice_activity_text">Choose Your Pokémon Type</string>
    <string name="button_select_fire_text">Fire</string>
    <string name="button_select_grass_text">Grass</string>
    <string name="button_select_water_text">Water</string>
    <string name="button_select_psychic_text">Psychic</string>
    <string name="button_select_steel_text">Steel</string>
    <string name="button_select_ghost_text">Ghost</string>
    <string name="button_select_electric_text">Electric</string>
    <string name="button_select_dragon_text">Dragon</string>
    <string name="button_select_fire_desc">FireButton</string>
    <string name="button_select_grass_desc">GrassButton</string>
    <string name="button_select_water_desc">WaterButton</string>
    <string name="button_select_psychic_desc">PsychicButton</string>
    <string name="button_select_steel_desc">SteelButton</string>
    <string name="button_select_ghost_desc">GhostButton</string>
    <string name="button_select_electric_desc">ElectricButton</string>
    <string name="button_select_dragon_desc">DragonButton</string>
    <string name="switch_test_mode_text">Test Mode</string>
    <string name="switch_test_mode_desc">TestModeSwitch</string>

    <!--    > Name Modal Dialog-->
    <string name="header_name_modal_text">Name your Pokémon</string>
    <string name="field_name_modal_hint">Leave blank for default</string>
    <string name="field_name_modal_desc">NameInputField</string>
    <string name="button_submit_text">Submit</string>
    <string name="button_submit_desc">SubmitButton</string>

    <!--    Main Activity-->
    <string name="pokemon_name_text">Pusheen</string>
    <string name="pokemon_sprite_desc">Pokémon Sprite</string>
    <string name="pokemon_sprite_overlay_desc">Overlay for Effects</string>
    <string name="pokemon_level_text">Level. 0</string>
    <string name="value_header_text">Statistics</string>
    <string name="value_sun_header_text">Sun</string>
    <string name="value_water_header_text">Water</string>
    <string name="value_love_header_text">Love</string>
    <string name="value_divider_text">/</string>
    <string name="value_sun_current_text">0</string>
    <string name="value_water_current_text">0</string>
    <string name="value_love_current_text">0</string>
    <string name="value_sun_max_text">0</string>
    <string name="value_water_max_text">0</string>
    <string name="value_love_max_text">0</string>
    <string name="value_sun_current_desc">ValueSunCurrent</string>
    <string name="value_water_current_desc">ValueWaterCurrent</string>
    <string name="value_love_current_desc">ValueLoveCurrent</string>
    <string name="value_sun_max_desc">ValueSunMaximum</string>
    <string name="value_water_max_desc">ValueWaterMaximum</string>
    <string name="value_love_max_desc">ValueLoveMaximum</string>
    <string name="button_sun_text">Press for Sunshine</string>
    <string name="button_water_text">Press for Water</string>
    <string name="button_love_text">Press for Love</string>
    <string name="button_evolve_desc">EvolveButton</string>
    <string name="button_sun_desc">SunButton</string>
    <string name="button_water_desc">WaterButton</string>
    <string name="button_love_desc">LoveButton</string>

    <!--    > Math Modal Dialog-->
    <string name="header_math_modal_text">Solve the Following Equation</string>
    <string name="button_solve_text">Solve</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_solve_desc">SolveButton</string>
    <string name="button_cancel_desc">CancelButton</string>
    <string name="value_constant_text">50</string>
    <string name="value_operator_text">+</string>
    <string name="value_variable_hint">\u003F</string>
    <string name="value_equality_text">=</string>
    <string name="value_sum_text">100</string>
    <string name="value_constant_desc">ConstantField</string>
    <string name="value_operator_desc">OperatorField</string>
    <string name="value_variable_desc">VariableField</string>
    <string name="value_equality_desc">EqualityField</string>
    <string name="value_sum_desc">SumField</string>
</resources>