<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/header_choice_activity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/header_choice_activity_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_select_fire"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/button_select_fire_desc"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="@+id/header_choice_activity_text"
        app:layout_constraintTop_toBottomOf="@+id/header_choice_activity_text"
        app:srcCompat="@drawable/type_fire" />

    <TextView
        android:id="@+id/button_select_fire_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_fire_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_select_fire"
        app:layout_constraintStart_toStartOf="@+id/button_select_fire"
        app:layout_constraintTop_toBottomOf="@+id/button_select_fire" />

    <ImageButton
        android:id="@+id/button_select_grass"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/button_select_grass_desc"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="@+id/button_select_fire"
        app:layout_constraintTop_toBottomOf="@+id/button_select_fire_text"
        app:srcCompat="@drawable/type_grass" />

    <TextView
        android:id="@+id/button_select_grass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_grass_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_select_grass"
        app:layout_constraintStart_toStartOf="@+id/button_select_grass"
        app:layout_constraintTop_toBottomOf="@+id/button_select_grass" />

    <ImageButton
        android:id="@+id/button_select_water"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/button_select_water_desc"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="@+id/button_select_grass"
        app:layout_constraintTop_toBottomOf="@+id/button_select_grass_text"
        app:srcCompat="@drawable/type_water" />

    <TextView
        android:id="@+id/button_select_water_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_water_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_select_water"
        app:layout_constraintStart_toStartOf="@+id/button_select_water"
        app:layout_constraintTop_toBottomOf="@+id/button_select_water" />

    <ImageButton
        android:id="@+id/button_select_dragon"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/button_select_dragon_desc"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="@+id/button_select_water"
        app:layout_constraintTop_toBottomOf="@+id/button_select_water_text"
        app:srcCompat="@drawable/type_dragon" />

    <TextView
        android:id="@+id/button_select_dragon_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_dragon_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_select_dragon"
        app:layout_constraintStart_toStartOf="@+id/button_select_dragon"
        app:layout_constraintTop_toBottomOf="@+id/button_select_dragon" />

    <ImageButton
        android:id="@+id/button_select_electric"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/button_select_electric_desc"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/header_choice_activity_text"
        app:layout_constraintTop_toBottomOf="@+id/header_choice_activity_text"
        app:srcCompat="@drawable/type_electric" />

    <TextView
        android:id="@+id/button_select_electric_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_electric_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_select_electric"
        app:layout_constraintStart_toStartOf="@+id/button_select_electric"
        app:layout_constraintTop_toBottomOf="@+id/button_select_electric" />

    <ImageButton
        android:id="@+id/button_select_steel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/button_select_steel_desc"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/button_select_electric"
        app:layout_constraintTop_toBottomOf="@+id/button_select_electric_text"
        app:srcCompat="@drawable/type_steel" />

    <TextView
        android:id="@+id/button_select_steel_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_steel_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_select_steel"
        app:layout_constraintStart_toStartOf="@+id/button_select_steel"
        app:layout_constraintTop_toBottomOf="@+id/button_select_steel" />

    <ImageButton
        android:id="@+id/button_select_psychic"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/button_select_psychic_desc"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/button_select_steel"
        app:layout_constraintTop_toBottomOf="@+id/button_select_steel_text"
        app:srcCompat="@drawable/type_psychic" />

    <TextView
        android:id="@+id/button_select_psychic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_psychic_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_select_psychic"
        app:layout_constraintStart_toStartOf="@+id/button_select_psychic"
        app:layout_constraintTop_toBottomOf="@+id/button_select_psychic" />

    <ImageButton
        android:id="@+id/button_select_ghost"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/button_select_ghost_desc"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/button_select_psychic"
        app:layout_constraintTop_toBottomOf="@+id/button_select_psychic_text"
        app:srcCompat="@drawable/type_ghost" />

    <TextView
        android:id="@+id/button_select_ghost_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_ghost_text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/button_select_ghost"
        app:layout_constraintStart_toStartOf="@+id/button_select_ghost"
        app:layout_constraintTop_toBottomOf="@+id/button_select_ghost" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_test_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/switch_test_mode_desc"
        android:text="@string/switch_test_mode_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>